# src/routes/meal.ts
@@ -1,5 +1,4 @@
 import { FastifyInstance, FastifyRequest } from 'fastify'
-import { knex } from '../database'
 import { verifyToken } from '../util/auth'
 
 import {
@@ -10,6 +9,7 @@ import {
 } from '../schemas/meal'
 import { checkUserLogged } from '../middleware/check-logged-user'
 import { fromZodError } from 'zod-validation-error'
+import prisma from '../prisma'
 
 export async function mealRoutes(app: FastifyInstance) {
   app.post(
@@ -37,15 +37,15 @@ export async function mealRoutes(app: FastifyInstance) {
 
         const userDate = verifyToken(token)
 
-        const mealCreated = await knex('meal')
-          .insert({
+        const mealCreated = await prisma.meal.create({
+          data: {
             name,
             description,
             id_user: userDate.id,
             ondiet,
             meal_at: mealAt,
-          })
-          .returning('*')
+          },
+        })
 
         return reply.code(201).header('Content-Type', 'application/json').send({
           statusCode: 201,
@@ -74,15 +74,15 @@ export async function mealRoutes(app: FastifyInstance) {
       } else {
         const alterMealObject = _body.data
 
-        const mealDate = await knex('meal')
-          .where('id', '=', alterMealObject.id)
-          .update({
+        const mealDate = await prisma.meal.update({
+          where: { id: alterMealObject.id },
+          data: {
             name: alterMealObject.name,
             description: alterMealObject.description,
             ondiet: alterMealObject.ondiet,
             meal_at: alterMealObject.meal_at,
-          })
-          .returning('*')
+          },
+        })
 
         reply.code(200).header('Content-Type', 'application/json').send({
           statusCode: 200,
@@ -99,7 +99,7 @@ export async function mealRoutes(app: FastifyInstance) {
     },
     async (request: FastifyRequest, reply) => {
       try {
-        const { id } = request.params
+        const { id }: any = request.params
 
         const idAsNumber = parseInt(id, 10)
 
@@ -116,21 +116,32 @@ export async function mealRoutes(app: FastifyInstance) {
         } else {
           const { id: idMeal } = _params.data
 
-          let id: string | undefined
+          let idUser: string | undefined
           if (typeof request.headers.authorization === 'string') {
             const dataClient = verifyToken(request.headers.authorization)
-            id = dataClient.id
+            idUser = dataClient.id
           }
 
-          const mealDeleted: any = await knex('meal')
-            .where('id', idMeal)
-            .andWhere('id_user', id)
-            .del()
-            .returning('*')
+          const mealDeleted: { count: number } = await prisma.meal.deleteMany({
+            where: {
+              AND: [
+                {
+                  id_user: {
+                    equals: idUser,
+                  },
+                },
+                {
+                  id: {
+                    equals: idMeal,
+                  },
+                },
+              ],
+            },
+          })
 
           const result = {
-            statusCode: mealDeleted === 1 ? 200 : 401,
-            message: mealDeleted === 1 ? 'Successfully' : 'Unauthorized',
+            statusCode: 200,
+            message: `Deleted ${mealDeleted.count} records`,
           }
 
           return reply
@@ -151,12 +162,38 @@ export async function mealRoutes(app: FastifyInstance) {
   )
 
   app.get(
-    '/:id',
+    '/list',
     {
       preHandler: checkUserLogged,
     },
     async (request, reply) => {
-      const _params = getSchema.safeParse(request.params)
+      const token =
+        request.headers.authorization !== undefined
+          ? request.headers?.authorization.replace('Bearer ', '')
+          : ''
+
+      const { id: idUser } = verifyToken(token)
+
+      const mealsSelected = await prisma.meal.findMany({
+        where: {
+          id_user: idUser,
+        },
+      })
+
+      reply.code(200).header('Content-Type', 'application/json').send({
+        statusCode: 200,
+        data: mealsSelected,
+      })
+    },
+  )
+
+  app.get('/:id', async (request, reply) => {
+    try {
+      const { id }: any = request.params
+
+      const idAsNumber = parseInt(id, 10)
+
+      const _params = deleteOrGetSchema.safeParse({ id: idAsNumber })
 
       if (_params.success === false) {
         reply
@@ -168,44 +205,29 @@ export async function mealRoutes(app: FastifyInstance) {
           })
       } else {
         const { id } = _params.data
+        const mealSelected: any = await prisma.meal.findUnique({
+          where: {
+            id,
+          },
+        })
 
-        const mealDeleted = await knex('meal').where('id_user', id)
+        const result = {
+          statusCode: mealSelected === null ? 404 : 200,
+          data: mealSelected === null ? {} : mealSelected,
+        }
 
         reply.code(200).header('Content-Type', 'application/json').send({
-          statusCode: 200,
-          data: mealDeleted,
+          statusCode: result.statusCode,
+          data: result.data,
         })
       }
-    },
-  )
-
-  app.get(
-    '/meal/:id',
-    {
-      preHandler: checkUserLogged,
-    },
-    async (request, reply) => {
-      const _params = deleteOrGetSchema.safeParse(request.params)
-
-      if (_params.success === false) {
-        reply
-          .code(400)
-          .header('Content-Type', 'application/json')
-          .send({
-            code: 400,
-            message: fromZodError(_params.error),
-          })
-      } else {
-        const { id } = _params.data
-        const mealSelected = await knex('meal').where('id_user', id)
-
-        reply.code(200).header('Content-Type', 'application/json').send({
-          statusCode: 200,
-          data: mealSelected,
-        })
-      }
-    },
-  )
+    } catch (error: any) {
+      return reply.code(500).header('Content-Type', 'application/json').send({
+        statusCode: 500,
+        message: error.message,
+      })
+    }
+  })
 
   app.get('/metric/:id', async (request, reply) => {
     const _params = getSchema.safeParse(request.params)
@@ -222,33 +244,58 @@ export async function mealRoutes(app: FastifyInstance) {
       const { id } = _params.data
 
       // Quantidade total de refeições registradas
-      const totalMeals = await knex('meal')
-        .count('* as total')
-        .where('id_user', id)
+      const totalMeals = await prisma.meal.count({
+        where: {
+          id_user: id,
+        },
+      })
 
       // Quantidade total de refeições dentro da dieta
-      const totalMealsOnDiet = await knex('meal')
-        .count('* as total')
-        .where('ondiet', true)
-        .andWhere('id_user', id)
+      const totalMealsOnDiet = await prisma.meal.count({
+        where: {
+          AND: [
+            {
+              ondiet: {
+                equals: true,
+              },
+            },
+            {
+              id_user: {
+                equals: id,
+              },
+            },
+          ],
+        },
+      })
 
       // Quantidade total de refeições fora da dieta
-      const totalMealsOffDiet = await knex('meal')
-        .count('* as total')
-        .where('ondiet', false)
-        .andWhere('id_user', id)
+      const totalMealsOffDiet = await prisma.meal.count({
+        where: {
+          AND: [
+            {
+              ondiet: {
+                equals: false,
+              },
+            },
+            {
+              id_user: {
+                equals: id,
+              },
+            },
+          ],
+        },
+      })
 
-      const query = `
-        select name from (
-            SELECT name, count(name) as total FROM
-            meal where ondiet = True
-            and id_user = ?
-            group by name
-        ) order by total desc
-        limit 1
-        `
-      // - Melhor sequência de refeições dentro da dieta
-      const bestsequenceOndiet = await knex.raw(query, [id])
+      const bestsequenceOndiet: [] = await prisma.$queryRaw`SELECT name
+      FROM (
+          SELECT name, COUNT(name) AS total
+          FROM meal
+          WHERE ondiet = TRUE
+          AND id_user = ${id}
+          GROUP BY name
+      ) AS subquery
+      ORDER BY total DESC
+      LIMIT 1;`
 
       return reply
         .code(200)
@@ -256,11 +303,9 @@ export async function mealRoutes(app: FastifyInstance) {
         .send({
           statusCode: 200,
           data: {
-            totalmeals: totalMeals.length > 0 ? totalMeals[0].total : 0,
-            totalmealsondiet:
-              totalMealsOnDiet.length > 0 ? totalMealsOnDiet[0].total : 0,
-            totalmealsoffdiet:
-              totalMealsOffDiet.length > 0 ? totalMealsOffDiet[0].total : 0,
+            totalmeals: totalMeals > 0 ? totalMeals : 0,
+            totalmealsondiet: totalMealsOnDiet > 0 ? totalMealsOnDiet : 0,
+            totalmealsoffdiet: totalMealsOffDiet > 0 ? totalMealsOffDiet : 0,
             bestsequenceOndiet:
               bestsequenceOndiet.length > 0 ? bestsequenceOndiet[0].name : '',
           },
